--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist/",
@@ -49,7 +50,6 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
-    "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.4.0",
