--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
     "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "lib": ["ES2020", "DOM"],
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -20,11 +21,14 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
     "target": "ES2020"
   },
-  "exclude": ["node_modules", "**/dist/**"]
+  "exclude": ["node_modules", "**/dist/**"],
+  "include": ["src"]
 }
