--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "vite build",
     "lint": "eslint .",
-    "prepare": "yran build",
+    "prepare": "yarn build",
+    "release": "release-it",
     "type-check": "tsc --onEmit"
   },
   "lint-staged": {
@@ -50,6 +51,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
+    "release-it": "^16.1.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.4.0",
