--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint .",
     "prepare": "yarn build",
     "release": "release-it",
+    "run:demo": "parcel demos/simple/index.html",
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
@@ -44,17 +45,28 @@
   },
   "packageManager": "yarn@3.6.1",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^7.0.0",
+    "@types/dedent": "^0.7.0",
     "@types/node": "^20.4.5",
+    "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "babel-preset-solid": "^1.7.7",
+    "dedent": "^1.5.1",
     "eslint": "^8.46.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "parcel": "^2.9.3",
     "prettier": "^3.0.0",
+    "prismjs": "^1.29.0",
     "release-it": "^16.1.3",
+    "solid-js": "^1.7.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.4.0",
     "vite-plugin-solid": "^2.7.0"
+  },
+  "peerDependencies": {
+    "solid-js": "*"
   }
 }
