--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "eslint .",
     "prepare": "yarn build",
     "release": "release-it",
-    "run:demo": "parcel demos/simple/index.html",
-    "build:demo": "",
+    "run:demo": "vite --config vite-demos.config.ts",
+    "build:demo": "vite build --config vite-demos.config.ts",
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
@@ -52,16 +52,15 @@
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
-    "babel-preset-solid": "^1.7.7",
     "dedent": "^1.5.1",
     "eslint": "^8.46.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "parcel": "^2.9.3",
     "prettier": "^3.0.0",
     "prismjs": "^1.29.0",
     "release-it": "^16.1.3",
     "solid-js": "^1.7.8",
+    "terser": "^5.19.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "vite-plugin-dts": "^3.4.0",
