--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "simple"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "yarn clean && vite build",
+    "clean": "rimraf dist",
     "lint": "eslint .",
     "prepare": "yarn build",
     "release": "release-it",
@@ -24,12 +25,20 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.esm.js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "browser": "./dist/esm/index.esm.js",
+      "import": "./dist/esm/index.esm.js",
+      "node": "./dist/cjs/index.js",
+      "require": "./dist/cjs/index.js",
+      "solid": "./dist/source/index.jsx"
+    }
+  },
   "files": [
-    "dist/",
-    "src/"
+    "dist/"
   ],
   "repository": {
     "type": "git",
@@ -59,6 +68,7 @@
     "prettier": "^3.0.0",
     "prismjs": "^1.29.0",
     "release-it": "^16.1.3",
+    "rimraf": "^5.0.1",
     "solid-js": "^1.7.8",
     "terser": "^5.19.2",
     "typescript": "^5.1.6",
