--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "import": "./dist/esm/index.esm.js",
       "node": "./dist/cjs/index.js",
       "require": "./dist/cjs/index.js",
-      "solid": "./dist/source/index.jsx"
+      "solid": "./dist/source/index.jsx",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "files": [
