--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "solidjs",
     "simple"
   ],
+  "type": "module",
+  "main": "dist/browser/index.common.js",
+  "module": "dist/browser/index.module.js",
+  "types": "dist/browser/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/browser/index.d.ts",
+      "solid": "./dist/browser/index.jsx",
+      "node": "./dist/server/index.module.js",
+      "default": "./dist/browser/index.module.js"
+    }
+  },
+  "files": [
+    "dist/"
+  ],
   "scripts": {
-    "build": "yarn clean && vite build",
+    "build": "yarn clean && rollup -c",
     "clean": "rimraf dist",
     "lint": "eslint .",
     "prepare": "yarn build",
     "release": "release-it",
-    "run:demo": "vite --config vite-demos.config.ts",
-    "build:demo": "vite build --config vite-demos.config.ts",
+    "run:demo": "vite",
+    "build:demo": "vite build",
     "type-check": "tsc --noEmit"
   },
   "lint-staged": {
@@ -25,22 +40,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.esm.js",
-  "types": "dist/types/index.d.ts",
-  "exports": {
-    ".": {
-      "browser": "./dist/esm/index.esm.js",
-      "import": "./dist/esm/index.esm.js",
-      "node": "./dist/cjs/index.js",
-      "require": "./dist/cjs/index.js",
-      "solid": "./dist/source/index.jsx",
-      "types": "./dist/types/index.d.ts"
-    }
-  },
-  "files": [
-    "dist/"
-  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:raghavan-renganathan/solid-simple-code-editor.git"
@@ -70,6 +69,8 @@
     "prismjs": "^1.29.0",
     "release-it": "^16.1.3",
     "rimraf": "^5.0.1",
+    "rollup": "^3.28.0",
+    "rollup-preset-solid": "^2.0.1",
     "solid-js": "^1.7.8",
     "terser": "^5.19.2",
     "typescript": "^5.1.6",
